discussion/kv_engine/126496/126496_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30044: Modernize using clang-tidy google-explicit-constructor

Change-Id: I08c088767152793e99c3d8e5a368a0adb1dfcbb3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-06-17 14:58:48.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-17 15:08:27.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24642/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:253:20:
error: invalid operands to binary expression ("basic_ostream<char, std::char_traits<char> >" and "cb::UserData")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24642/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28612/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(252): error C2679: binary "<<": no operator found which takes a right-hand operand of type "cb::UserData" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28612/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2818/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2: error: "Include threadlocal.h instead" [clang-diagnostic-error]
#error "Include threadlocal.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:31: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: error: cannot initialize a parameter of type "int" with an rvalue of type "nullptr_t" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: note: passing argument to parameter "dtor" here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:88:5: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalDestructor dtor;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vb_commit.h:43:21: warning: pass by value and use std::move [modernize-pass-by-value]
                    const vbucket_state& vbs = {})
                    ^~~~~~~~~~~~~~~~~~~~
                    vbucket_state 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_conn_store.h:33:18: error: variable has incomplete type "Vbid" [clang-diagnostic-error]
            Vbid vbid, const ConnHandler& conn) {
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/conn_store.h:33:7: note: forward declaration of "Vbid"
class Vbid;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/xattr/blob.h:47:35: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    explicit Blob(std::unique_ptr<char[]>& allocator_, size_t size = 0)
                                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2818/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2:
error: "Include threadlocal.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2818/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4229/ : FAILURE

Compile error at [2020-06-17T15:02:01.190Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:253:20:
error: no match for ?operator<<? (operand types are ?std::basic_ostream<char>? and ?cb::UserData?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4229/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4313/ : FAILURE

Compile error at [2020-06-17T15:04:26.680Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:253:20:
error: no match for ?operator<<? (operand types are ?std::basic_ostream<char>? and ?cb::UserData?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4313/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12056/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3284/ : FAILURE

Compile error at [2020-06-17T14:59:30.223Z] ../magma/util/buffer_test.cc:89:12:
error: call to constructor of "magma::Buffer" is ambiguous
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3284/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1322/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4175/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
